--- a/views/admin-layout.ejs
+++ b/views/admin-layout.ejs
@@ -137,6 +137,13 @@
                     </li>
                 </ul>
             </div>
+            <% if (isAuthenticated) { %>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/logout">Logout</a>
+                    </li>
+                </ul>
+            <% } %>
         </div>
     </nav>
     <section class="hero">
